--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,52 @@
-.App {
-  text-align: center;
+.main {
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-end;
+  padding-bottom: 0px;
+
+}
+
+.title {
+  display:flex;
   align-items: center;
+  flex-direction: column;
+  flex-wrap: wrap;
+  font-size:xx-large;
+  font-weight: 700;
+}
+
+.settings {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 5px;
+}
+.clue {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  width: auto;
+  height: 50px;
+  background-color: skyblue;
+  margin-top: 0px;
+  margin-bottom: 10px;
+  padding: 10px;
+}
+
+.canvas {
+  width: 800px;
+  height: 800px;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-button {
-  font-size: calc(10px + 2vmin);
+.crossword-grid {
+width:798px;
+height: 800px;
+background-color: whitesmoke;
+border: 2px solid black;
 }
