--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,7 @@
 body {
+  display: flex;
+  justify-content: center;
+  background-color: rgb(251, 245, 236);
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
